--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,13 @@
             <version>0.50</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.webjars/popper.js -->
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>popper.js</artifactId>
+            <version>1.12.9-1</version>
+        </dependency>
+
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
