--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,8 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/hospitalmanagementsystem?allowPublicKeyRetrieval=true&useSSL=false
+    url: jdbc:mysql://mysql:3306/hospitalmanagementsystem?allowPublicKeyRetrieval=true&useSSL=false
     username: root
-    password: Hesowit2022@04
+    password: pass
     driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     hibernate:
